Introduce grid system and fix overflow issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -19,7 +19,26 @@ body {
   font-family: "News Cycle";
 }
 
+#container {
+  width: 100%;
+  height: 100vh;
+  /*  background: yellow;*/
+  display: grid;
+  /*  grid-template-rows: 80px 600px 80px;
+  grid-template-columns: 0.5fr 1fr;*/
+
+  grid-template-rows: auto 1fr auto;
+  /*grid-template-columns: auto;*/
+
+  /* To prevent child content  exeeding the grid-container! */
+  grid-template-columns: minmax(0, 1fr);
+  /*  grid-template-columns: 0.5fr 1fr;  */
+}
+
 header {
+  grid-row: 1;
+  grid-column: 1;
+
   z-index: 10;
   width: 100%;
   height: var(--header-height-mobile);
@@ -35,7 +54,18 @@ header {
   font-size: 1.25rem;
 }
 
+main {
+  grid-column: 1;
+  grid-row: 2;
+
+  display: flex;
+  flex-direction: column;
+}
+
 footer {
+  grid-column: 1;
+  grid-row: 3;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,6 +84,11 @@ section {
   flex-direction: column;
   align-items: center;
   padding: 125px 100px;
+}
+
+section.hero {
+  background-color: var(--header-bg-color);
+  margin: 0;
 }
 
 p {
@@ -185,10 +220,6 @@ header nav ul li:hover a {
   background-color: var(--nav-overlay-bg-color);
   z-index: 2;
   cursor: pointer;
-}
-
-main {
-  display: flex;
 }
 
 section {
